Trying to fix the menu viewport heights on mobile browsers, for a while we have had them getting cut off by the top, this started in June 2024, we have been having trouble solving this issue

--- a/main/static/css/main/yb_containers9.css
+++ b/main/static/css/main/yb_containers9.css
@@ -696,7 +696,7 @@
         right: 0px;
         bottom: 0px;
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         transform: translateY(100vh);
         transition: 0.25s;
         overflow-y: scroll;
